--- a/pom.xml
+++ b/pom.xml
@@ -11,12 +11,13 @@
 
     <modules>
         <module>mall-tiny-boot</module>
+        <module>mall-tiny-mybatis</module>
     </modules>
 
     <parent>
         <groupId>org.springframework.boot</groupId>
         <artifactId>spring-boot-starter-parent</artifactId>
-        <version>2.7.5</version>
+        <version>2.5.6</version>
         <relativePath/> <!-- lookup parent from repository -->
     </parent>
 
