--- a/pom.xml
+++ b/pom.xml
@@ -12,6 +12,7 @@
     <modules>
         <module>mall-tiny-boot</module>
         <module>mall-tiny-mybatis</module>
+        <module>mall-tiny-mybatis-generator</module>
     </modules>
 
     <parent>
